implementato il recupero delle ultime 5 segnalazioni da visualizzare nella schermata di index
