# app/models/report.js
@@ -7,7 +7,11 @@ const ReportSchema = new mongoose.Schema({
   notes: {type: String, required: true},
   location: {type: String, required: true},
   upvote: {type: Number, required: true, default: 0},
-  downvote: {type: Number, required: true, default: 0}
+  downvote: {type: Number, required: true, default: 0},
+  createdtime: {type: String, required: true, default: () => {
+    const now = new Date();
+    return now.toISOString().slice(0, 10) + ' ' + now.toTimeString().slice(0, 5);
+  }}
 });
 
 /** ID of the report is autoincremented */
